# BlueCarbon_MVR_System

./: .env  .env.example  .env.production  API.md  BLOCKCHAIN_DEPLOYMENT_STRATEGY.md  CARBON_CALCULATION_EXAMPLE.md  CARBON_CALCULATION_METHODOLOGY.md  CONFIG.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  Dockerfile  EMAIL_SETUP_SUMMARY.md  EMAIL_TROUBLESHOOTING.md  FINAL_FIXES_SUMMARY.md  FINAL_TEST_SUMMARY.md  FIXES_IMPLEMENTED.md  FIXES_SUMMARY.md  FREE_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INNOVATION_SUMMARY.md  INSTALLATION.md  NCCR_ADMIN_COMPLETE.md  NEW_FEATURES_SUMMARY.md  NGO_ACCESS_GUIDE.md  NGO_AUTHENTICATION_FIX.md  QUICKSTART.md  README.md  RUN_COMPLETE_SYSTEM.md  SETUP_GUIDE.md  TESTING_SUMMARY.md  app.py  app_admin_complete.py  app_corrected.py  app_fixed.py  approval_workflow_system.py  auth.py  blockchain_audit_system.py  blockchain_routes.py  (+60 more)
blockchain/: .env.contracts  .env.example  FREE_DEPLOYMENT_GUIDE.md  MUMBAI_DEPLOYMENT.md  README-MUMBAI.md  hardhat.config.js  package-lock.json  package.json  setup-mumbai.js  tsconfig.json
blockchain/contracts/: CarbonCreditToken.sol  MRVRegistry.sol
blockchain/deployments/: deployment-hardhat-1759050493363.json
blockchain/scripts/: deploy.js  deploy.ts
blockchain/test/: MRVRegistry.test.js
docs/: architecture-diagram.md  visual-overview.md
static/: manifest.json  sw.js
static/css/: admin.css  auto-responsive.css  responsive.css  universal-responsive.css
static/js/: auto-responsive.js  blockchain-integration.js  responsive-tables.js  satellite_map_utils.js
templates/: admin_base.html  base.html  index.html  industry_base.html  public_home.html  register.html  responsive_test.html
templates/admin/: add_admin.html  admins.html  approval_workflow.html  carbon_calculator.html  carbon_sequestration.html  climate_impact.html  comprehensive_dashboard.html  dashboard.html  drone_monitoring.html  ecosystem_analysis.html  fraud_detection.html  industries.html  industry_application_details.html  login.html  (+15 more)
(+30 files in other folders)
